<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textSize="0.2in" android:text="@string/regTitle"/>
<TableLayout android:layout_width="fill_parent" android:id="@+id/tableLayout2" android:layout_height="wrap_content">
	<TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/username"></TextView>
    <EditText android:text="" android:id="@+id/editText3" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
	<TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password"></TextView>
    <EditText android:text="" android:id="@+id/editText4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:password="true"></EditText>
	<TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/confirm"></TextView>
    <EditText android:text="" android:id="@+id/editText5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:password="true"></EditText>
	<TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email"></TextView>
    <EditText android:text="" android:id="@+id/editText6" android:layout_width="wrap_content" android:layout_height="wrap_content"></EditText>
	<Button android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register"></Button>
</TableLayout>
</LinearLayout>